--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,21 @@ dependencies = [
     "unicorn[standard]>=2.1.4",
     "ipykernel>=7.1.0",
     "matplotlib>=3.10.8",
-    "torch>=2.5.1",
-    "torchvision>=0.20.1",
-    "torchaudio>=2.5.1",
+    "torch",
+    "torchvision",
+    "torchaudio",
     "transformers>=4.46.0",
     "accelerate>=1.1.0",
     "evaluate>=0.4.0",
     "numpy>=1.26.0",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-nightly"
+url = "https://download.pytorch.org/whl/nightly/cu128"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-nightly" }
+torchvision = { index = "pytorch-nightly" }
+torchaudio = { index = "pytorch-nightly" }
