--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
     "datasets>=4.4.2",
-    "fastapi>=0.125.0",
+    "fastapi[standard]",
     "joblib>=1.5.3",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
@@ -15,20 +15,12 @@ dependencies = [
     "ipykernel>=7.1.0",
     "matplotlib>=3.10.8",
     "torch",
-    "torchvision",
-    "torchaudio",
     "transformers>=4.46.0",
     "accelerate>=1.1.0",
     "evaluate>=0.4.0",
     "numpy>=1.26.0",
+    "streamlit>=1.52.2",
+    "uvicorn>=0.40.0",
 ]
 
-[[tool.uv.index]]
-name = "pytorch-nightly"
-url = "https://download.pytorch.org/whl/nightly/cu128"
-explicit = true
 
-[tool.uv.sources]
-torch = { index = "pytorch-nightly" }
-torchvision = { index = "pytorch-nightly" }
-torchaudio = { index = "pytorch-nightly" }
