--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,27 @@ dependencies = [
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "scikit-learn>=1.8.0",
-    "unicorn[standard]>=2.1.4",
+    "unicorn>=2.1.4",
     "ipykernel>=7.1.0",
     "matplotlib>=3.10.8",
     "torch",
-    "transformers>=4.46.0",
+    "transformers",
+    "torchaudio",
     "accelerate>=1.1.0",
     "evaluate>=0.4.0",
     "numpy>=1.26.0",
     "streamlit>=1.52.2",
     "uvicorn>=0.40.0",
+    "sentencepiece>=0.2.1",
+    "protobuf>=6.33.2",
 ]
 
+[[tool.uv.index]]
+name = "pytorch-nightly"
+url = "https://download.pytorch.org/whl/nightly/cu128"
+explicit = true
 
+[tool.uv.sources]
+torch = { index = "pytorch-nightly" }
+torchvision = { index = "pytorch-nightly" }
+torchaudio = { index = "pytorch-nightly" }
